--- a/myfinance-web-netcore/Views/Shared/_Layout.cshtml
+++ b/myfinance-web-netcore/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="PlanoConta" asp-action="Index">Plano de Contas</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RegistroTransacoes" asp-action="Index">Registro Transações</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
