--- a/myfinance-web-netcore/Views/Home/Index.cshtml
+++ b/myfinance-web-netcore/Views/Home/Index.cshtml
@@ -1,8 +1,27 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "My Finance";
 }
 
 <div class="text-center">
     <h1 class="display-4">@ViewData["Title"]</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="container">
+        <main role="main" class="pb-3">
+            <div class="text-center">
+                <p>O MyFinance é um projeto voltado para a gestão de finanças pessoais. Desenvolvido como parte do curso de Pós-Graduação em Engenharia de Software da PUC Minas, o sistema tem como objetivo simplificar a organização financeira, permitindo o controle de receitas, despesas e planejamento financeiro.</p>
+            </div>
+
+            <!-- Team Section -->
+            <div class="card">
+                <h2>Integrantes do Projeto</h2>
+                <div class="team-list">
+                    <ul>
+                        <li>Gislaine Frandalozo</li>
+                        <li>Alan Sousa Santos</li>
+                        <li>Yuri de Oliveira da Costa</li>
+                        <li>Luisa Borges Mendonça</li>
+                    </ul>
+                </div>
+            </div>
+        </main>
+    </div>
 </div>
