--- a/myfinance-web-netcore/Views/PlanoConta/Index.cshtml
+++ b/myfinance-web-netcore/Views/PlanoConta/Index.cshtml
@@ -3,39 +3,62 @@
     ViewData["Title"] = "Plano de Contas";
 }
 
-<h1>Plano de Contas</h1>
-<br />
-<a type='button' class='btn btn-primary' asp-area='' asp-controller="PlanoConta" asp-action="Cadastro"> Criar item de Plano de
-    Conta </a>
-<br /> <br />
-<table class="table table-bordered">
-    <tr>
-        <th>Id</th>
-        <th>Descrição</th>
-        <th>Tipo</th>
-        <th>#</th>
-        <th>#</th>
-    </tr>
+<div class="container my-5">
+    <div class="card shadow-lg border-success">
+        <div class="card-header bg-success text-white">
+            <h3 class="m-0">Plano de Contas</h3>
+        </div>
+        <div class="card-body">
+            <div class="d-flex justify-content-between mb-4">
+                <a type='button' class='btn btn-success' asp-area='' asp-controller="PlanoConta" asp-action="Cadastro">
+                    Criar item de Plano de Conta
+                </a>
+            </div>
 
-    @{
-        foreach (var item in (List<PlanoConta>)ViewBag.Lista)
-        {
-            <tr>
-                <td>@item.Id</td>
-                <td>@item.Nome</td>
-                <td>@item.Tipo</td>
-                <td><button type='button' class='btn btn-warning' onclick="Editar(@item.Id)">  Editar </button></td>
-                <td><button type='button' class='btn btn-danger'  onclick="Excluir(@item.Id)"> Excluir </button></td>
-            </tr>
+            <table class="table table-striped table-bordered">
+                <thead class="table-success">
+                    <tr>
+                        <th>Id</th>
+                        <th>Descrição</th>
+                        <th>Tipo</th>
+                        <th class="text-center" colspan="2">Ações</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @{
+                        foreach (var item in (List<PlanoConta>)ViewBag.Lista)
+                        {
+                            <tr>
+                                <td>@item.Id</td>
+                                <td>@item.Nome</td>
+                                <td>@item.Tipo</td>
+                                <td class="text-center">
+                                    <button type='button' class='btn btn-warning btn-sm' onclick="Editar(@item.Id)">
+                                        Editar
+                                    </button>
+                                </td>
+                                <td class="text-center">
+                                    <button type='button' class='btn btn-danger btn-sm' onclick="Excluir(@item.Id)">
+                                        Excluir
+                                    </button>
+                                </td>
+                            </tr>
+                        }
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<script>
+    function Editar(id) {
+        window.location.href = "../PlanoConta/Cadastro/" + id;
+    }
+
+    function Excluir(id) {
+        if (confirm('Tem certeza que deseja excluir este item?')) {
+            window.location.href = "../PlanoConta/Excluir/" + id;
         }
     }
-</table>
-<script>
-function Editar(id){
-    window.location.href = "../PlanoConta/Cadastro/" + id;
-}
-
-function Excluir(id){
-    window.location.href = "../PlanoConta/Excluir/" + id;
-}
 </script>
