--- a/myfinance-web-netcore/Views/RegistroTransacoes/Index.cshtml
+++ b/myfinance-web-netcore/Views/RegistroTransacoes/Index.cshtml
@@ -3,40 +3,58 @@
     ViewData["Title"] = "Registro de Transações";
 }
 
-<h1>Registro de Transações</h1>
-<br />
-<a type='button' class='btn btn-primary' asp-area='' asp-controller="RegistroTransacoes" asp-action="Cadastro"> Criar item de Transação </a>
-<br /> <br />
-<table class="table table-bordered">
-    <tr>
-        <th>Id</th>
-        <th>Data</th>
-        <th>Valor</th>
-        <th>Histórico</th>
-        <th>Tipo</th>
-        <th>#</th>
-        <th>#</th>
-    </tr>
+<div class="container my-5">
+    <div class="card shadow-lg border-success">
+        <div class="card-header bg-success text-white">
+            <h3 class="m-0">@ViewData["Title"]</h3>
+        </div>
+        <div class="card-body">
+            <div class="mb-4">
+                <a type="button" class="btn btn-success" asp-area="" asp-controller="RegistroTransacoes" asp-action="Cadastro">
+                    Criar item de Transação
+                </a>
+            </div>
+            <table class="table table-striped table-bordered">
+                <thead class="table-success">
+                    <tr>
+                        <th>Id</th>
+                        <th>Data</th>
+                        <th>Valor</th>
+                        <th>Histórico</th>
+                        <th>Tipo</th>
+                        <th>#</th>
+                        <th>#</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in (List<Transacao>)ViewBag.Lista)
+                    {
+                        <tr>
+                            <td>@item.Id</td>
+                            <td>@item.Data.ToString("dd/MM/yyyy")</td>
+                            <td>@item.Valor</td>
+                            <td>@item.Historico</td>
+                            <td>@item.Tipo</td>
+                            <td>
+                                <button type="button" class="btn btn-warning" onclick="Editar(@item.Id)">Editar</button>
+                            </td>
+                            <td>
+                                <button type="button" class="btn btn-danger" onclick="Excluir(@item.Id)">Excluir</button>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-    @foreach (var item in (List<Transacao>)ViewBag.Lista)
-    {
-        <tr>
-            <td>@item.Id</td>
-            <td>@item.Data.ToString("dd/MM/yyyy")</td>
-            <td>@item.Valor</td>
-            <td>@item.Historico</td>
-            <td>@item.Tipo</td>
-            <td><button type='button' class='btn btn-warning' onclick="Editar(@item.Id)">  Editar </button></td>
-            <td><button type='button' class='btn btn-danger'  onclick="Excluir(@item.Id)"> Excluir </button></td>
-        </tr>
-    }
-</table>
 <script>
-function Editar(id){
-    window.location.href = "../RegistroTransacoes/Cadastro/" + id;
-}
+    function Editar(id) {
+        window.location.href = "../RegistroTransacoes/Cadastro/" + id;
+    }
 
-function Excluir(id){
-    window.location.href = "../RegistroTransacoes/Excluir/" + id;
-}
+    function Excluir(id) {
+        window.location.href = "../RegistroTransacoes/Excluir/" + id;
+    }
 </script>
